[package]
name = "lkaas-kerong"
edition = "2021"
version = "0.1.0"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = [
    "oldtime",
    "std",
    "clock",
] }
rumqttc = "0.24.0"
serial = "0.4.0"
toml = "0.8.15"

[profile.release]
opt-level = 3
